--- a/practice3.html
+++ b/practice3.html
@@ -15,7 +15,7 @@
     <h2>Paula Shrestha</h2>
     <h3>Welcome Friends!</h3>
     <p>This is Paula Shrestha from Massachusetts.</P>
-    <img src="file:///C:/Users/Narayan/Desktop/DSC_2975%20(2).jpg"
+    <img src="file:///C:/Users/Narayan/Desktop/DSC_2975%20(2).JPG"
 	width ="800" 
 	height ="500"/>
     
