--- a/practice4.html
+++ b/practice4.html
@@ -10,7 +10,7 @@
 <h2>Paula Shrestha</h2>
 <h3>Welcome Friends!</h3>
 <p>This is Paula Shrestha from Massachusetts.</P>
-<img src="Dsc_2972.jpg"
+<img src="https://github.com/PawanaS/paula.github.io/issues/1"
 width ="800"
 height ="500"/>
 <p>I am taking classes in Perscholas. I believe, we can do it. Nothing is impossible!</p>
